== Mon Jun  7 18:00:39 UTC 2010 Mikel Lindsaar <mikel@rubyx.com>

* Updating versioning so we only have one source, VERSION.yml (mikel)
* Changed activesupport dependency to 2.3.6 to fix #53, #64, and def #67. (Artem Titoulenko)
* Fixing typo in break_down_to.rb. (mikel)

== Mon Jun  7 18:07:16 UTC 2010 Mikel Lindsaar <mikel@rubyx.com>

* fixing a typo when generating docs. (Andrew Bloom)
* Changing \r\n\t to \r\n\s throughout mail (mikel)
* Handle multiple quoted words in Encodings.unquote_and_convert_to (Eric Kidd)
* Ruby 1.9: mark source encoding so it's usable with -Ks, -Ke, etc (Jeremy Kemper)
* Add #include? to mail body for convenience (Maxim Chernyak)
* Use Mail::TestMailer.deliveries in README example (John Trupiano)
* Allow bundler to automatically build a gem directly from git (Eric Kidd)

== Sun Apr 11 07:49:15 UTC 2010 Mikel Lindsaar <raasdnil@gmail.com>

* Lots of updates on encoding and decoding of headers and unstructured fields.  This
  is now a lot cleaner and nicer.  Also more predictable.
* Merged encoding branch back into head
* Version bump to 2.2.0
* Tagged 2.2.0

== Sun Apr  4 06:41:46 UTC 2010 Mikel Lindsaar <raasdnil@gmail.com>

* Created non-ascii header auto encoding for address fields and unstructured fields
* Changed default behaviour of mail, if you specify a charset, it will use that charset
  regardless of what is in the body.  Previously, if the body was all US-ASCII, it would
  set the charset to US-ASCII in preference.
* Many internal version jumps from 2.1.5.3 => 2.1.5.8 - unreleased development versions

== Mon 29 Mar 2010 07:04:34 UTC Mikel Lindsaar <raasdnil@gmail.com>

* Version bump to 2.1.5.3
* No longer depend on vendor'd treetop as treetop now has optional loading of parts of the library
* Change treetop dependency to 1.4.5

== Sun 28 Mar 2010 10:31:33 UTC Mikel Lindsaar <raasdnil@gmail.com>

* Version bump to 2.1.5.2
* Fixed up preserve case in header fields when assigned from a message closes issue #46
