@@ -1,3 +1,7 @@
+== Tue Jun  8 01:55:21 UTC 2010 Mikel Lindsaar <mikel@rubyx.com>
+
+* Added inline attachment support to mail (mikel)
+
 == Mon Jun  7 18:00:39 UTC 2010 Mikel Lindsaar <mikel@rubyx.com>
 
 * Updating versioning so we only have one source, VERSION.yml (mikel)
